opam-version: "1.2"
maintainer: "Emmanuel PINEAU <epineau49.dev@gmail.com>"
homepage: "https://github.com/Emmanuel-PLF/facile"
authors: [ "ENAC <facile@recherche.enac.fr>" ]
bug-reports: "https://github.com/Emmanuel-PLF/facile/issues"
dev-repo: "https://github.com/Emmanuel-PLF/facile.git"

build: [
  [ "dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
]
available: [ ocaml-version >= "4.03.0" ]
